fix: h4 spacing

--- a/packages/gatsby-theme-carbon/src/components/markdown/Markdown.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/markdown/Markdown.module.scss
@@ -61,6 +61,10 @@
   }
 }
 
+.h4 + * {
+  --space: 0;
+}
+
 //spacing exception for nested list items
 :global(.bx--list--nested) {
   --space: 0;
